added db + Prime entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=msvc-primefinder
 logging.level.root=INFO
+
+spring.datasource.url=jdbc:sqlite:primes.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
+# Fresh db on project start: [create-drop] - for persistence: [update]
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
