--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=
 # Fresh db on project start: [create-drop] - for persistence: [update]
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
