--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.46.0.1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
@@ -90,6 +93,7 @@
     </dependencies>
 
     <build>
+        <finalName>msvc-primefinder</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
