Added support for XML contentType

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
 spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 spring.data.redis.password=
+
+spring.mvc.converters.preferred-json-mapper=jackson
