--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.application.name=msvc-primefinder
 logging.level.root=INFO
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
-spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
-spring.data.redis.password=
 
 spring.mvc.converters.preferred-json-mapper=jackson
+
+spring.cache.type=simple
