--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=msvc-primefinder
 logging.level.root=INFO
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
 spring.mvc.converters.preferred-json-mapper=jackson
 
-spring.cache.type=simple
+server.port=${PORT:8080}
